--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 
+@import 'assets/scss/variables';
+@import 'assets/scss/buttons';
+
+
+
 agm-map {
     height: 300px;
 }
