--- a/src/app/lugares/lugares.component.html
+++ b/src/app/lugares/lugares.component.html
@@ -2,9 +2,16 @@
 	<div class="row">
 		<div class="col-md-8">
 			<h2>Lugares cercanos</h2>
-			<ul class="list-group">
+			<ul>
 				<ng-container *ngFor="let lugar of lugares">
-					<a routerLink="/detalle/{{lugar.id}}" [queryParams]="{action:'edit'}"><li *ngIf="lugar.active" class="list-group-item">{{ lugar.nombre }}</li></a>
+					<a routerLink="/detalle/{{lugar.id}}" [queryParams]="{action:'edit'}">
+						<li *ngIf="lugar.active">
+							<div class="picture">
+								<img [src]="lugar.img" alt="">
+							</div>
+							{{ lugar.nombre }}
+						</li>
+					</a>
 				</ng-container>
 			</ul>
 		</div>
@@ -15,7 +22,7 @@
 	</div>
 </div>
 
-<ul>
+<!--<ul>
 	<ng-container *ngFor="let lugar of lugares; let i = index" [ngSwitch]="lugar.cercania">
 		<li contar-clicks [ngStyle]="{color: (lugar.active) ? 'black': 'gray'}" [ngClass]="{'numero-par': (i+1) % 2 !== 0 }" [resaltar]="lugar.plan">
 			{{ lugar.nombre }} -
@@ -25,4 +32,4 @@
 		</li>
 		
 	</ng-container>
-</ul>
+</ul>-->
