--- a/src/app/crear-lugar/crear-lugar.component.scss
+++ b/src/app/crear-lugar/crear-lugar.component.scss
@@ -9,6 +9,16 @@
         }
         form{
             margin-bottom: 15px;
+            .fileUploader{
+                background: $sec-color;
+                color: $base-light-color;
+                padding: .5em;
+                cursor: pointer;
+                input{
+                    display: none;
+                    cursor: pointer;
+                }
+            }
             label{
                 font-weight: normal;
             }
@@ -24,9 +34,18 @@
             }
             .picture{
                 margin-bottom: 15px;
+                text-align: center;
                 img{
                     border-radius: 50%;
+                    margin-bottom: 15px;
+                    width: 180px;
+                    height: 180px;
                 }
+            }
+            h3{
+                color: $sec-color;
+                font-size: 14px;
+                text-transform: uppercase;
             }
         }
     }
