Refactoring service and fixing details to firebase objects

--- a/src/app/detalle/detalle.component.html
+++ b/src/app/detalle/detalle.component.html
@@ -4,7 +4,7 @@
     </div><!-- .breadcrumb -->
 
     <div class="picture">
-        <img [src]="lugar.img" alt="">
+        <!--<img [src]="lugar.img" alt="">-->
     </div>
     <h1>{{ lugar.nombre }}</h1>
 </div><!-- .cover -->
