--- a/src/app/lugares/lugares.component.scss
+++ b/src/app/lugares/lugares.component.scss
@@ -1,6 +1,13 @@
 @import '../../assets/scss/variables';
 
 :host
+
+
+    .btn-agregar{
+        position: absolute;
+        bottom: 20px;
+        right: 20px;
+    }
   
     h2{
         font-weight: lighter;
@@ -10,9 +17,13 @@
         display: flex;
         justify-content: space-around;
         margin-top: 20px;
+        padding: 0;
+        flex-wrap: wrap;
         a{
             color: $sec-color;
             text-decoration: none;
+            margin-bottom: 15px;
+            padding: 0 15px;
             &:hover{
                 color: darken($sec-color, 20%);
             }
