--- a/src/assets/scss/buttons.scss
+++ b/src/assets/scss/buttons.scss
@@ -16,3 +16,12 @@
         background: darken($sec-color, 10%);
     }
 }
+
+.btn-agregar{
+    width: 50px;
+    height: 50px;
+    display: inline-block;
+    text-align: center;
+    border-radius: 50%;
+    line-height: 50px;
+}
